--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="wz.png" alt="Company Logo">
+                    <img src="wz.jpeg" alt="Company Logo">
                     Design & Inspection Department 
                 </a>
      
